# naothello

./: LICENSE.TXT  README.md
app/: CMakeLists.txt  functions.cmake  hello.exports  nativeaot.cmake
app/src/: hello.c  hello.cxx  hello.h  main.c
libnaothello/: Class1.cs  libnaothello.csproj
libnaothello/inc/: naothello.h
